--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ anyhow = "1.0"
 colored = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[dev-dependencies]
+assert_cmd = "2.0"
+predicates = "3.0"
+tempfile = "3.0"
