--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ description = "A command-line tool for parsing WDL (Workflow Description Languag
 authors = ["Scott Chamberlain"]
 license = "MIT"
 
+[lib]
+name = "wdlparse"
+crate-type = ["cdylib", "rlib"]
+
 [[bin]]
 name = "wdlparse"
 path = "src/main.rs"
@@ -17,8 +21,13 @@ anyhow = "1.0"
 colored = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+pyo3 = { version = "0.26", features = ["extension-module"], optional = true }
 
 [dev-dependencies]
 assert_cmd = "2.0"
 predicates = "3.0"
 tempfile = "3.0"
+
+[features]
+default = []
+python = ["pyo3"]
