--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = "1.0"
 colored = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+regex = "1.0"
 pyo3 = { version = "0.26", features = ["extension-module"], optional = true }
 
 [dev-dependencies]
